Change to only token
